# CASSI-SSL

./: .gitignore  README.md  README_TRAINING.md  check_setup.py  download_dataset.sh  download_real_masks.py  main.py  prepare_data.py  pyproject.toml  run_train.sh  test_mask_data.py
test_code/: option.py  test.py  test_adaption.py  utils.py
test_code/architecture/: __init__.py
train_code/: loss.py  option.py  template.py  train.py  utils.py
train_code/architecture/: GAP_Net.py  __init__.py
