[project]
name = "cassi-ssl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "numpy>=2.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.10.0",
    "torch>=2.4.0",
    "torchmetrics>=1.0.0",
    "torchvision>=0.19.0",
]
